cleaned up files

--- a/Angular/Demo2/css/mystyle.css
+++ b/Angular/Demo2/css/mystyle.css
@@ -1,45 +1,44 @@
-body{
-	background-image: url("../images/DJ.jpg");
-	background-size: 100%;
-	color: red;
+body {
+    background-image: url("../images/DJ.jpg");
+    background-size: 100%;
+    color: red;
 }
 
-.wrapper{
-	display: block;
-	margin: 0 auto;
-	max-width: 80%;
-	border-radius: 5px;
-	background-color:rgba(255,255,255, 0.3);
-	overflow: auto;
+.wrapper {
+    display: block;
+    margin: 0 auto;
+    max-width: 80%;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.3);
+    overflow: auto;
 }
 
-h1,nav{
-	text-align: center;
+h1, nav {
+    text-align: center;
 }
 
-nav a{
-	border-right: 1px solid white;
-	padding-right: 5px;
-	color: red;
+nav a {
+    border-right: 1px solid white;
+    padding-right: 5px;
+    color: red;
 }
 
-li{
-list-style-type: none;
+li {
+    list-style-type: none;
 }
 
-a{
-	text-decoration: none;
-	
+a {
+    text-decoration: none;
 }
 
-ul{
-	margin: 0 auto;
+ul {
+    margin: 0 auto;
 }
 
-input,select{
-	border-radius: 5px;
-	display: block;
-	margin: 0 auto;
-	margin-top: 5px;
-	margin-bottom: 5px;
+input, select {
+    border-radius: 5px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
