--- a/Angular/EmployeeDirect/css/style.css
+++ b/Angular/EmployeeDirect/css/style.css
@@ -16,6 +16,16 @@ form input {
     margin: 0 auto;
 }
 
+
+#last {
+    margin-bottom: 15px;
+}
+
+#aNew {
+    display: block;
+    margin: 0 auto;
+}
+
 span {
     padding: 1px 5px 1px 5px;
     border-radius: 8px;
